# crypto_api_chachapoly

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE BSD 2-CLAUSE.md  LICENSE MIT.md  README.md
examples/: libsodium_compare.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
src/: chacha20_ietf.rs  chachapoly_ietf.rs  lib.rs  macros.rs  poly1305.rs  verify_input.rs  xchacha20.rs  xchachapoly.rs
src/core/: chacha20.rs  mod.rs  poly1305.rs
tests/: chacha20_ietf.json  chacha20_ietf.rs  chacha20_ietf.txt  chacha20_ietf_api.txt  chachapoly_ietf.json  chachapoly_ietf.rs  chachapoly_ietf.txt  chachapoly_ietf_api.txt  chachapoly_ietf_err.txt  poly1305.json  poly1305.rs  poly1305.txt  poly1305_api.txt  read_test_vectors.rs  xchacha20.json  xchacha20.rs  xchachapoly.json  xchachapoly.rs
tests/shared/: mod.rs
