[package]
name = "crypto_api_chachapoly"
version = "0.2.2"
edition = "2018"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "An implementation of ChaCha20-IETF, Poly1305 and ChachaPoly-IETF for `crypto_api`"
keywords = ["Crypto", "ChaCha20", "Poly1305", "ChaCha20-Poly1305", "AEAD"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api_chachapoly"
readme = "README.md"


[dependencies]
crypto_api = "^0.2"


[dev-dependencies]
json = "^0.12"
hex = "^0.4"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
