[package]
name = "crypto_api_chachapoly"
version = "0.4.2"
edition = "2018"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "An implementation of ChaCha20-IETF, Poly1305 and ChachaPoly-IETF for `crypto_api`"
keywords = ["Crypto", "ChaCha20", "Poly1305", "ChaCha20-Poly1305", "AEAD"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api_chachapoly"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/crypto_api_chachapoly" }
appveyor = { repository = "KizzyCode/crypto_api_chachapoly" }
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "KizzyCode/crypto_api_chachapoly" }
is-it-maintained-issue-resolution = { repository = "KizzyCode/crypto_api_chachapoly" }


[dependencies]
crypto_api = "^0.2"

[dev-dependencies]
json = "^0.12"
hex = "^0.4"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
