[package]
name = "fuzz"
version = "0.1.0"
authors = ["Keziah Biermann <development@kizzycode.de>"]
edition = "2018"


[features]
default = ["jemallocator"]


[dependencies]
crypto_api_chachapoly = { path = "../" }
sodiumoxide = "^0.2"
num_cpus = "^1.11"
hex = "^0.4"
jemallocator = { version = "^0.3", optional = true }


[profile.dev]
overflow-checks = true
panic = "abort"

[profile.release]
overflow-checks = true
panic = "abort"

[profile.bench]
overflow-checks = true